--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -7,8 +7,7 @@ services:
         # [Choice] Install Node.js
         INSTALL_NODE: "false"
         NODE_VERSION: "lts/*"
-        # Please adapt to package name:
-        PACKAGE_NAME: "my_microservice"
+        PACKAGE_NAME: "dhfs"
         # On Linux, you may need to update USER_UID and USER_GID below if not your local UID is not 1000.
         USER_UID: 1000
         USER_GID: 1000
@@ -30,20 +29,7 @@ services:
 
     # define environment variables
     environment:
-      # Please adapt to package name:
-      MY_MICROSERVICE_CONFIG_YAML: /workspace/.devcontainer/.dev_config.yaml
-      # Used by db migration:
-      DB_URL: postgresql://postgres:postgres@postgresql/postgres
-    # Use "forwardPorts" in **devcontainer.json** to forward an app port locally.
-    # (Adding the "ports" property to this file will not forward from a Codespace.)
-
-
-    # Please remove service dependencies that are not needed:
-  mongodb:
-    image: mongo:latest
-    restart: unless-stopped
-    volumes:
-      - mongo_fs:/data/db
+      DHFS_CONFIG_YAML: /workspace/.devcontainer/.dev_config.yaml
 
   localstack:
     image: localstack/localstack
@@ -66,4 +52,3 @@ services:
 
 volumes:
   s3_fs: {}
-  mongo_fs: {}
