--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -44,4 +44,4 @@ WORKDIR /home/appuser
 USER appuser
 # set environment
 ENV PYTHONUNBUFFERED=1
-ENTRYPOINT ["dhfs"]
+ENTRYPOINT ["dhfs interrogate"]
