--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ version = "0.1.0"
 description = "Data Hub File Service - a service enabling file inspection and re-encryption at Data Hubs"
 dependencies = [
     "typer >= 0.19.1",
-    "ghga-service-commons[api] >= 5.0",
+    "ghga-service-commons[http,objectstorage] >= 5.0",
     "hexkit[s3] >= 7.0",
 ]
 
