--- a/.devcontainer/.dev_config.yaml
+++ b/.devcontainer/.dev_config.yaml
@@ -12,3 +12,6 @@ object_storages:
       s3_endpoint_url: http://dcs:4566
       s3_access_key_id: test
       s3_secret_access_key: test
+central_api_url: http://127.0.0.1:8000/central
+central_api_public_key: dWoWghAEVPcpHILEb5drJx59nF+of6YKuAOhKRpmegY=
+data_hub_private_key: "?"
