--- a/.devcontainer/.dev_config.yaml
+++ b/.devcontainer/.dev_config.yaml
@@ -3,15 +3,21 @@ object_storages:
   inbox:
     bucket: inbox
     credentials:
-      s3_endpoint_url: http://dcs:4566
+      s3_endpoint_url: http://localstack:4566
       s3_access_key_id: test
       s3_secret_access_key: test
   interrogation:
     bucket: interrogation
     credentials:
-      s3_endpoint_url: http://dcs:4566
+      s3_endpoint_url: http://localstack:4566
       s3_access_key_id: test
       s3_secret_access_key: test
 central_api_url: http://127.0.0.1:8000/central
 central_api_public_key: dWoWghAEVPcpHILEb5drJx59nF+of6YKuAOhKRpmegY=
-data_hub_private_key: "?"
+data_hub_private_key: "{}"
+client_retry_status_codes:  # Don't retry 500
+- 408
+- 429
+- 502
+- 503
+- 504
